--- a/.gitignore
+++ b/.gitignore
@@ -1,219 +1,17 @@
-// components/Rescope/CustodianView/CustodianAccordion.jsx
-import React, { useEffect, useState } from 'react';
-import {
-  Accordion,
-  AccordionSummary,
-  AccordionDetails,
-  Typography,
-  Box,
-  Table,
-  TableHead,
-  TableBody,
-  TableRow,
-  TableCell,
-  Button,
-  TablePagination
-} from '@mui/material';
-import ExpandMoreIcon from '@mui/icons-material/ExpandMore';
-import axios from 'axios';
-import ScopeDataFilters from '../Shared/ScopeDataFilters';
-import CustodianModal from './CustodianModal';
-
-const CustodianAccordion = () => {
-  const [data, setData] = useState([]);
-  const [filters, setFilters] = useState(null);
-  const [page, setPage] = useState(0);
-  const [rowsPerPage, setRowsPerPage] = useState(10);
-  const [currentBU, setCurrentBU] = useState(null);
-  const [modalOpen, setModalOpen] = useState(false);
-
-  // Fetch & group data, applying filters as query params
-  const fetchData = async (filterParams) => {
-    try {
-      const res = await axios.get('/api/GetBUScopeData', {
-        params: filterParams || {}
-      });
-      const grouped = {};
-      res.data.forEach(item => {
-        const { subcategoryId, businessUnitAbbr } = item;
-        if (!grouped[subcategoryId]) {
-          grouped[subcategoryId] = {
-            subcategoryId,
-            subcategoryName: item.subcategoryName,
-            subcategoryDescription: item.subcategoryDescription,
-            relatedSubcategories: item.relatedCsf1_1Subcategories,
-            businessUnits: []
-          };
-        }
-        if (
-          !grouped[subcategoryId].businessUnits.find(
-            bu => bu.businessUnitAbbr === businessUnitAbbr
-          )
-        ) {
-          grouped[subcategoryId].businessUnits.push({
-            ...item,
-            showAuditor: false,
-          });
-        }
-      });
-      setData(Object.values(grouped));
-    } catch (err) {
-      console.error('Error fetching scope data', err);
-    }
-  };
-
-  // Initial & filtered fetch
-  useEffect(() => {
-    fetchData(filters);
-  }, [filters]);
-
-  // Pagination
-  const paged = data.slice(page * rowsPerPage, (page + 1) * rowsPerPage);
-  const handleChangePage = (_, newPage) => setPage(newPage);
-  const handleChangeRowsPerPage = e => {
-    setRowsPerPage(+e.target.value);
-    setPage(0);
-  };
-
-  // When filters change, reset page and apply
-  const handleFilterChange = (filterValues) => {
-    setFilters(filterValues);
-    setPage(0);
-  };
-
-  // Toggle showing auditor rec for a given BU
-  const toggleAuditorRec = (subcatId, buAbbr) => {
-    setData(d =>
-      d.map(sc => {
-        if (sc.subcategoryId === subcatId) {
-          return {
-            ...sc,
-            businessUnits: sc.businessUnits.map(bu =>
-              bu.businessUnitAbbr === buAbbr
-                ? { ...bu, showAuditor: !bu.showAuditor }
-                : bu
-            )
-          };
-        }
-        return sc;
-      })
-    );
-  };
-
-  // Open the edit modal
-  const openModal = bu => {
-    setCurrentBU(bu);
-    setModalOpen(true);
-  };
-
-  // Save callback updates only that one BU
-  const handleSave = updated => {
-    setData(d =>
-      d.map(sc => ({
-        ...sc,
-        businessUnits: sc.businessUnits.map(bu =>
-          bu.businessUnitAbbr === updated.businessUnitAbbr &&
-          sc.subcategoryName === updated.subcategoryName
-            ? { ...updated, showAuditor: false }
-            : bu
-        )
-      }))
-    );
-    setModalOpen(false);
-  };
-
-  // Prepare filter options from loaded data
-  const filterOptions = {
-    subcategoryNames: data.map(d => d.subcategoryName),
-    bus: ['ABC','UIO','POA','SKA-C'],
-    buOwners: Array.from(new Set(data.flatMap(d => d.businessUnits.map(bu => bu.businessUnitOwner)))),
-    subcatCustodians: Array.from(new Set(data.flatMap(d => d.businessUnits.map(bu => bu.subcatOwnerSubcatCustodian)))),
-    inScopeOptions: ['Yes','No'],
-    profileTypes: ['Provider','Consumer','Both','Inheritor']
-  };
-
-  return (
-    <Box sx={{ m: 2 }}>
-      {/* Filters */}
-      <ScopeDataFilters
-        onFilterChange={handleFilterChange}
-        filterOptions={filterOptions}
-      />
-
-      {/* Level 1 Header */}
-      <Box display="flex" sx={{ borderBottom: '1px solid #ccc', mb: 2, p: 1 }}>
-        <Box flex={1}><Typography variant="subtitle1" fontWeight="bold">Subcategory</Typography></Box>
-        <Box flex={2}><Typography variant="subtitle1" fontWeight="bold">Description</Typography></Box>
-        <Box flex={1}><Typography variant="subtitle1" fontWeight="bold">Related CSF</Typography></Box>
-      </Box>
-
-      {/* Accordions for each subcategory */}
-      {paged.map(sc => (
-        <Accordion key={sc.subcategoryId}>
-          <AccordionSummary expandIcon={<ExpandMoreIcon />}>
-            <Box display="flex" width="100%">
-              <Box flex={1}><Typography variant="h6">{sc.subcategoryName}</Typography></Box>
-              <Box flex={2}><Typography>{sc.subcategoryDescription}</Typography></Box>
-              <Box flex={1}><Typography variant="caption">{sc.relatedSubcategories}</Typography></Box>
-            </Box>
-          </AccordionSummary>
-
-          <AccordionDetails>
-            {/* Level 2 Table */}
-            <Table size="small">
-              <TableHead sx={{ backgroundColor: 'black' }}>
-                <TableRow>
-                  {[
-                    'BU','Your Custodian','In Scope?','Justification',
-                    'Maturity','Profile','Consuming From BU','Dept','Info','Actions'
-                  ].map(header => (
-                    <TableCell key={header} sx={{ color: 'white', fontWeight: 'bold' }}>
-                      {header}
-                    </TableCell>
-                  ))}
-                </TableRow>
-              </TableHead>
-              <TableBody>
-                {sc.businessUnits.map(bu => (
-                  <React.Fragment key={bu.businessUnitAbbr}>
-                    <TableRow sx={{ '&:hover': { backgroundColor: 'rgba(0,0,0,0.04)' } }}>
-                      <TableCell>{bu.businessUnitAbbr}</TableCell>
-                      <TableCell>{bu.subcatOwnerSubcatCustodian}</TableCell>
-                      <TableCell>{bu.subcatOwnerIsInScope}</TableCell>
-                      <TableCell>{bu.subcatOwnerJustification}</TableCell>
-                      <TableCell>{bu.subcatOwnerMaturityProjection}</TableCell>
-                      <TableCell>{bu.subcatOwnerProfileType}</TableCell>
-                      <TableCell>{bu.subcatOwnerConsumingFromBusinessUnit}</TableCell>
-                      <TableCell>{bu.subcatOwnerDepartmentName}</TableCell>
-                      <TableCell>
-                        <Button
-                          size="small"
-                          onClick={() =>
-                            toggleAuditorRec(sc.subcategoryId, bu.businessUnitAbbr)
-                          }
-                        >
-                          {bu.showAuditor ? 'Hide Auditor Rec' : 'Show Auditor Rec'}
-                        </Button>
-                      </TableCell>
-                      <TableCell>
-                        <Button
-                          size="small"
-                          variant="outlined"
-                          onClick={() => openModal(bu)}
-                        >
-                          Make Changes
-                        </Button>
-                      </TableCell>
-                    </TableRow>
-
-                    {/* Level 3: Auditor Recommendation Panel */}
+{/* Level 3: Auditor Recommendation in a grid */}
                     {bu.showAuditor && (
                       <TableRow>
-                        <TableCell colSpan={10} sx={{ backgroundColor: '#f4f4f4', p: 1 }}>
-                          <Typography variant="subtitle2">Auditor Recommendation</Typography>
-                          <Box sx={{ pl: 2 }}>
+                        <TableCell colSpan={10} sx={{ backgroundColor: '#f4f4f4', p: 2 }}>
+                          <Typography variant="subtitle2" gutterBottom>
+                            Auditor Recommendation
+                          </Typography>
+                          <Box
+                            display="grid"
+                            gridTemplateColumns="repeat(2, 1fr)"
+                            gap={2}
+                          >
                             <Typography><strong>Custodian:</strong> {bu.auditorSubcatCustodian}</Typography>
-                            <Typography><strong>In Scope?:</strong> {bu.auditorIsInScope}</Typography>
+                            <Typography><strong>In Scope?</strong> {bu.auditorIsInScope}</Typography>
                             <Typography><strong>Justification:</strong> {bu.auditorJustification}</Typography>
                             <Typography><strong>Maturity:</strong> {bu.auditorMaturityProjection}</Typography>
                             <Typography><strong>Profile:</strong> {bu.auditorProfileType}</Typography>
@@ -223,36 +21,3 @@ const CustodianAccordion = () => {
                         </TableCell>
                       </TableRow>
                     )}
-                  </React.Fragment>
-                ))}
-              </TableBody>
-            </Table>
-          </AccordionDetails>
-        </Accordion>
-      ))}
-
-      {/* Pagination */}
-      <TablePagination
-        component="div"
-        count={data.length}
-        page={page}
-        onPageChange={handleChangePage}
-        rowsPerPage={rowsPerPage}
-        onRowsPerPageChange={handleChangeRowsPerPage}
-        rowsPerPageOptions={[10, 20, 50]}
-      />
-
-      {/* Edit Modal */}
-      {currentBU && (
-        <CustodianModal
-          open={modalOpen}
-          onClose={() => setModalOpen(false)}
-          data={currentBU}
-          onSave={handleSave}
-        />
-      )}
-    </Box>
-  );
-};
-
-export default CustodianAccordion;
